tests/parsing/smtlib/v2.7/errors/074_define-fun_bad_name_1.smt2
(set-logic ALL)
(define-fun _)
